fix image alignment in scoreboard

--- a/src/style/scss/_menu.scss
+++ b/src/style/scss/_menu.scss
@@ -216,6 +216,9 @@
 .iapp-menu-scoreboard-icon {
   height: 35px;
   width: 35px;
+  img {
+    display: block;
+  }
 }
 
 .iapp-menu-scoreboard-icon, .iapp-menu-scoreboard-score {
